# hiking-mcp

./: .gitignore  README.md  mcp-server.py  mcp_server.py  pyproject.toml
src/mcp_hiking/: __init__.py  server.py
src/mcp_hiking/api/: __init__.py  wikiloc.py
src/mcp_hiking/utils/: __init__.py
tests/: __init__.py  conftest.py  test_server.py
tests/api/: test_wikiloc.py
tests/resources/: trail.html
