[project]
name = "mcp-hiking"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for searching hiking trails on Wikiloc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "simplekml>=1.3.1",
    "wkbparse>=0.2.1",
]

[project.scripts]
mcp-hiking = "mcp_hiking.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
